# esp32-amp-sensor

./: .gitignore  Cargo.toml  README.md  build.rs  cfg_example.toml  diagram.json  wokwi.toml
.github/workflows/: rust_ci.yml
backend/laptop_lan_montior/: .gitignore  monitor.py  requirements.txt
src/: amps.rs  display.rs  http_server.rs  main.rs  nvs.rs  state.rs
src/wifi/: mod.rs
