[package]
name = "esp32-amp-sensor"
version = "0.1.0"
authors = ["Santiago Saavedra <info@ssaavedra.eu>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native", "hw-394-prototype"]

hw-394-prototype = []
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
toml-cfg = "0.2.0"
heapless = "0.8.0"
ssd1306 = "0.8.4"
display-interface = "0.5.0"
once_cell = "1.19.0"
embedded-svc = "0.27.1"
anyhow = "1.0.82"
embassy-time = "0.3.0"
embassy-executor = "0.5.0"

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "=0.1.3"
